--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -1,77 +1,31 @@
 //
+@import "../../../bower_components/bootstrap/less/bootstrap.less";
+
 html, body {
   height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: courier;
-  overflow: hidden;
-}
-#pano {
-  top: -3%;
-  left: -15%;
-  height: 85%;
-  width: 90%;
-}
-#map {
-  position: absolute;
-  top: -10%;
-  right: 0;
-  width: 30%;
-  height: 120%;
+  overflow-x: hidden;
 }
 
-#activity {
-  height: 20%;
-  width: 70%;
-  background-color: white;
-  position: absolute;
-
-  left: 0;
-  bottom: 0;
+#geo {
+   height: 60%;
+   #map, #pano { height: 100%;}
 }
-
-#pointInfo {
-  position: absolute;
-  right: 1% ;
-  width: 26%;
-  bottom: 1%;
-
-  background-color: white;
-  padding: 1%;
-}
-#pointInfo p { margin: 0;}
-.description {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.short {
-  height: 5%;
-  white-space: nowrap;
-}
-.name {
-  font-weight: bold;
-}
-
-.splash {
-  padding: 10px;
-  width: 500px;
-  height: 90%;
-  position: absolute;
-  top: 5%;
-  left: 50%;
-
-  margin-left: -250px;
-  background: white
-}
-
-.hide {
-  display: none;
-}
- .splash h1, .splash p {text-align: center;}
 
 
 #currentId {
-  position: absolute;
-  top:50%;
-  right: 1%;
+  width: 100%;
+  text-align: center;
+}
+
+#controls {
+  background-color: royalblue;
+  padding-bottom: 0.5em;
+  padding-top: 0.5em;
+  font-size: 0.7em;
+}
+
+.hide { display: none; }
+
+h5 {
+  text-align: center;
 }
