tilt, layout, debug, moves

--- a/app/assets/css/screen.css
+++ b/app/assets/css/screen.css
@@ -6760,3 +6760,20 @@ h5 {
   height: 100%;
   overflow-y: scroll;
 }
+.gm-iv-address-link,
+.gm-iv-horizontal-separator,
+.gm-iv-marker,
+.gm-iv-vertical-separator {
+  display: none !important;
+}
+.gmnoprint,
+.gm-style-cc {
+  display: none !important;
+}
+img[src*="images/sv4"] {
+  display: none !important;
+}
+img[src*="white4"],
+img[src*="images/google4"] {
+  display: none !important;
+}
