pitching like a chef

--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -40,18 +40,15 @@ h5 {
   }
 }
 
-
+// panorama adress
+.gm-iv-address { display: none !important;}
 .gm-iv-address-link, .gm-iv-horizontal-separator, .gm-iv-marker, .gm-iv-vertical-separator {
   display: none !important;
 }
 
-.gmnoprint, .gm-style-cc {
-  display: none !important;
-}
-img[src*="images/sv4"] {
-    display: none !important;
-}
+// controls
+.gmnoprint, .gm-style-cc { display: none !important;}
 
-img[src*="white4"], img[src*="images/google4"]{
-  display: none !important;
-}
+// logos
+img[src*="images/sv4"] { display: none !important; }
+img[src*="white4"], img[src*="images/google4"]{ display: none !important;}
