--- a/app/assets/css/screen.css
+++ b/app/assets/css/screen.css
@@ -6760,6 +6760,9 @@ h5 {
   height: 100%;
   overflow-y: scroll;
 }
+.gm-iv-address {
+  display: none !important;
+}
 .gm-iv-address-link,
 .gm-iv-horizontal-separator,
 .gm-iv-marker,
