--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -7,12 +7,17 @@ html, body {
 }
 
 #instagramFeed {
-  height: 150px*2;
+  // height: 150px*2;
+  height: 150px;
   overflow-y: scroll;
 }
 
 #map, #pano { height: 30%; }
 
+#pathway {
+  height: 20%;
+  background-color: gold;
+}
 #currentId {
   width: 100%;
   text-align: center;
@@ -40,6 +45,8 @@ h5 {
     overflow-y: scroll;
   }
 }
+
+
 
 // panorama adress
 .gm-iv-address { display: none !important;}
