D3 world map implementation

--- a/app/assets/css/screen.css
+++ b/app/assets/css/screen.css
@@ -6739,7 +6739,7 @@ body {
 }
 #pathway {
   height: 20%;
-  background-color: gold;
+  background-color: royalblue;
 }
 #currentId {
   width: 100%;
