--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -16,7 +16,7 @@ html, body {
 
 #pathway {
   height: 20%;
-  background-color: gold;
+  background-color: royalblue;
 }
 #currentId {
   width: 100%;
