--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -3,7 +3,9 @@
 
 html, body {
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
+  // background-color: black
+    background-color: royalblue;
 }
 
 #instagramFeed {
@@ -14,6 +16,7 @@ html, body {
 #map, #pano {
   height: calc(~"((100% - 200px)/100) * 40 ");
   width: 100%;
+
 }
 
 #pathway{
@@ -35,6 +38,7 @@ html, body {
   padding-top: 0.5em;
   font-size: 0.5em;
   height: 50px;
+  color: white;
 }
 
 .hide { display: none; }
