toner map and sync load

--- a/app/assets/css/screen.css
+++ b/app/assets/css/screen.css
@@ -6815,3 +6815,7 @@ img[src*="white4"],
 img[src*="images/google4"] {
   display: none !important;
 }
+img[src*="google_white5"],
+img[src*="images/google4"] {
+  display: none !important;
+}
