--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -87,6 +87,7 @@ h5 {
 // // logos
 img[src*="images/sv4"] { display: none !important; }
 img[src*="white4"], img[src*="images/google4"]{ display: none !important;}
+img[src*="google_white5"], img[src*="images/google4"]{ display: none !important;}
 
 
 .grayscale {
