--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -27,11 +27,13 @@ html, body {
   position: absolute;
   top:0;
   left:0;
+  margin-left: 2%;
   // display: none;
+  // background-image: url(../images/whiteGradient.svg);
 }
 #tonerMap {
-  width: 77%;
-  margin-left: 33%;
+  // width: 77%;
+  // margin-left: 33%;
 }
 
 #currentId {
@@ -70,10 +72,11 @@ h5 {
 
 .graticule {
   fill: none;
-  stroke: white;
-  stroke-width: .5px;
-  stroke-opacity: .5;
+  stroke: black;
+  stroke-width: 0.5px;
 }
+
+.land { fill: black;}
 
 // panorama adress
 .gm-iv-address { display: none !important;}
