--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -11,7 +11,7 @@ html, body {
 
 #instagramFeed {
   height: 150px;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   .grayscale();
 }
 
@@ -66,7 +66,7 @@ h5 {
   height: 20%;
   .col {
     height: 100%;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
 }
 
