--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -13,14 +13,16 @@ html, body {
   height: 150px;
   // overflow-y: scroll;
   .grayscale();
+
 }
 
 #map, #pano, #pathway, #tonerMap{
     width: 100%;
+      background-color: black !important;
 }
-#tonerMap, #world { height: calc(~"((100% - 150px)/100) * 15 ")}
-#map  { height: calc(~"((100% - 150px)/100) * 40 ");.grayscale();}
-#pano { height: calc(~"((100% - 150px)/100) * 45 ");.grayscale();}
+#tonerMap, #world { height: calc(~"((100% - 300px)/100) * 15 ")}
+#map  { height: calc(~"((100% - 300px)/100) * 35 ");.grayscale();}
+#pano { height: calc(~"((100% - 300px)/100) * 50 ");.grayscale();}
 
 #world {
   width: 33%;
