--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -14,15 +14,19 @@ html, body {
   // overflow-y: scroll;
   .grayscale();
 
+  .instaImage {
+    width: 100/8%;
+  }
+
 }
 
 #map, #pano, #pathway, #tonerMap{
     width: 100%;
       background-color: black !important;
 }
-#tonerMap, #world { height: calc(~"((100% - 300px)/100) * 15 ")}
-#map  { height: calc(~"((100% - 300px)/100) * 35 ");.grayscale();}
-#pano { height: calc(~"((100% - 300px)/100) * 50 ");.grayscale();}
+#tonerMap, #world { height: calc(~"((100% - 135px*2)/100) * 15 ")}
+#map  { height: calc(~"((100% - 135px*2)/100) * 35 ");.grayscale();}
+#pano { height: calc(~"((100% - 135px*2)/100) * 50 ");.grayscale();}
 
 #world {
   width: 33%;
