--- a/app/assets/less/screen.less
+++ b/app/assets/less/screen.less
@@ -59,6 +59,18 @@ html, body {
     color: white;
 
     border-radius: 4px;
+    height: 2.5em;
+    overflow: hidden;
+
+    &:hover {
+      height: auto;
+      overflow: hidden;
+    }
+  }
+
+
+  .bookmarked {
+    background: gold;
   }
 }
 
